--- a/smarthub/src/css/AIPractice.css
+++ b/smarthub/src/css/AIPractice.css
@@ -56,3 +56,37 @@
     border-radius: 10px;
     line-height: 40px;
 }
+.artLayout {
+    width: 500px;
+    height: 400px;
+    position: absolute;
+    left: 100px;
+    top: 200px;
+    border: 1px solid rgb(180, 0, 0);
+    display: flex;
+  }
+  
+  .artTextArea {
+    width: 300px;
+    height: 400px;
+    position: absolute;
+    left: 650px;
+    top:200px;
+    border: 1px solid rgb(0, 161, 105);
+  }
+  .artSubmit{
+    width: 150px;
+    height: 40px;
+    font-size: 18px;
+    border: 1px solid rgb(180, 0, 0);
+    border-radius: 10px;
+    line-height: 40px;
+    position: absolute;
+    top: 400px;
+    left: 730px;
+  }
+  .image{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
